@@ -502,7 +502,7 @@ int DeviceShutdown(
 	/* [in] Device UDN. */
 	char *Udn, 
 	/* [in] . */
-	char *_Server, 
+	/*char *_Server,*/
 	/* [in] Location URL. */
 	char *Location, 
 	/* [in] Device duration in sec. */
